[build-system]
requires = ["setuptools>=61", "setuptools-scm>=7", "wheel", "ninja", "cmake>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "LinkPython-extern"
description = "A fork of the LinkPython wrapper for Ableton Link"
requires-python = ">=3.7,<3.14"
authors = [{ name = "gonzaloflirt" }]
maintainers = [{ name = "thegamecracks" }]
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Topic :: System :: Networking",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest>=7.4.4"]

[project.urls]
Homepage = "https://github.com/thegamecracks/link-python"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=modules/",
]

[tool.setuptools.packages.find]
where = ["src-py"]

[tool.setuptools_scm]
