[build-system]
requires = ["setuptools>=61", "wheel", "ninja", "cmake>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "LinkPython-extern"
version = "1.2.1"
description = "A fork of the LinkPython wrapper for Ableton Link"
requires-python = ">=3.9,<3.15"
license = "Unlicense"
license-files = ["LICENSE.md"]
authors = [{ name = "gonzaloflirt" }]
maintainers = [{ name = "thegamecracks" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Topic :: System :: Networking",
]

[dependency-groups]
dev = ["pytest>=7.4.4"]

[project.urls]
Homepage = "https://github.com/thegamecracks/link-python"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=modules/",
]

[tool.setuptools.packages.find]
where = ["src-py"]

[tool.uv]
cache-keys = [
    { dir = "src" },
    { dir = "src-py" },
    { file = "pyproject.toml" },
    { git = { commit = true } },
]
