[build-system]
requires = ["pybind11>=3.0.4", "scikit-build-core>=0.12.2"]
build-backend = "scikit_build_core.build"

[project]
name = "LinkPython-extern"
version = "1.3.0a1"
description = "A fork of the LinkPython wrapper for Ableton Link"
requires-python = ">=3.9,<3.15"
license = "Unlicense"
license-files = ["LICENSE.md"]
authors = [{ name = "gonzaloflirt" }]
maintainers = [{ name = "thegamecracks" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Topic :: System :: Networking",
]

[dependency-groups]
dev = ["pytest>=7.4.4"]

[project.urls]
Homepage = "https://github.com/thegamecracks/link-python"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=modules/",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = "CMakeLists.txt"
sdist.include = ["modules"]
sdist.exclude = [
    "*.pdf",
    ".github",
    "assets",
    "ci",
    "docs",
    "example",
    "examples",
    "tests",
]
wheel.packages = ["src-py/link"]

[tool.uv]
cache-keys = [
    { dir = "src" },
    { dir = "src-py" },
    { file = "pyproject.toml" },
    { git = { commit = true } },
]
